--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -52,6 +52,7 @@
                         <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="100%;" frameborder="0"></iframe>'>热搜词管理</a></dd>
                         <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/platform/hall/list" width="100%" height="100%;" frameborder="0"></iframe>'>虚拟展厅</a></dd>
                         <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/article/list" width="100%" height="100%;" frameborder="0"></iframe>'>行业资讯</a></dd>
+                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/opportunity/list" width="100%" height="100%;" frameborder="0"></iframe>'>企业商机</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
