--- a/src/main/resources/templates/exhibitioninfo/list2.html
+++ b/src/main/resources/templates/exhibitioninfo/list2.html
@@ -38,9 +38,9 @@
                                         </div>
                                         <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
                                             <div class="layui-form-item">
-                                                <label class="layui-form-label">fid</label>
+                                                <label class="layui-form-label">展位号</label>
                                                 <div class="layui-input-block">
-                                                    <input type="text" name="fid" placeholder="蜂鸟云地图Fid" autocomplete="off" class="layui-input">
+                                                    <input type="text" name="boothno" placeholder="展位号" autocomplete="off" class="layui-input">
                                                 </div>
                                             </div>
                                         </div>
