版本控制后台

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -52,7 +52,7 @@
                         <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="100%;" frameborder="0"></iframe>'>热搜词管理</a></dd>
                         <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/platform/hall/list" width="100%" height="100%;" frameborder="0"></iframe>'>虚拟展厅</a></dd>
                         <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/article/list" width="100%" height="100%;" frameborder="0"></iframe>'>行业资讯</a></dd>
-                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/opportunity/list" width="100%" height="100%;" frameborder="0"></iframe>'>企业商机</a></dd>
+                        <dd><a href="javascript:;" menuid="304" menuurl='<iframe src="/platform/opportunity/list" width="100%" height="100%;" frameborder="0"></iframe>'>企业商机</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -73,6 +73,7 @@
                     <a href="javascript:;">资料上传</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="/platform/resourceupload/input" width="100%" height="100%;" frameborder="0"></iframe>'>设置上传</a></dd>
+                        <dd><a href="javascript:;" menuid="601" menuurl='<iframe src="/platform/version/list" width="100%" height="100%;" frameborder="0"></iframe>'>app版本控制</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
