--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -150,10 +150,10 @@
 
         $('.layui-tab-item').attr("style","height: "+$(window).height()+"px;")
 
-        // $('#nickname').text(loginUserInfo.name);
-        // $('#detail').find("input").eq(0).attr("value",loginUserInfo.name);
-        // $('#detail').find("input").eq(1).attr("value",loginUserInfo.loginname);
-        // $('#detail').find("input").eq(2).attr("value",loginUserInfo.roleName);
+        $('#nickname').text(loginUserInfo.name);
+        $('#detail').find("input").eq(0).attr("value",loginUserInfo.name);
+        $('#detail').find("input").eq(1).attr("value",loginUserInfo.loginname);
+        $('#detail').find("input").eq(2).attr("value",loginUserInfo.roleName);
 
         //触发事件
         var active = {
