--- a/src/main/resources/templates/video/input.html
+++ b/src/main/resources/templates/video/input.html
@@ -99,7 +99,8 @@
             upload.render({
                 elem: '#test5'
                 , url: '/api/upLoadByHttp?remarks=' + 3 //改成您自己的上传接口
-                ,accept: 'file' //视频
+                ,accept: 'video' //视频
+                ,exts: 'mp4'
                 ,size: 2000*1024
                 ,done: function(res){
                     layer.msg('上传成功');
