--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -71,7 +71,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">企业logo</label>
                             <div class="layui-input-block">
-                                <img th:src="*{logo}" width="100px" height="100px">
+                                <img th:src="*{headPortrait}" width="100px" height="100px">
                             </div>
                         </div>
                         <div class="layui-form-item">
