--- a/src/main/resources/templates/atlas/input.html
+++ b/src/main/resources/templates/atlas/input.html
@@ -20,7 +20,7 @@
                         <div class="layui-upload">
                             <button type="button" class="layui-btn" id="test1">上传</button>
                             <div class="layui-upload-list" style="margin-left: 100px;">
-                                <img class="layui-upload-img" id="demo1" th:src="*{imgUrl}">
+                                <img class="layui-upload-img" id="demo1" th:src="*{imgUrl}" width="200">
                             </div>
                         </div>
                     </div>
