--- a/src/main/resources/templates/banner/input.html
+++ b/src/main/resources/templates/banner/input.html
@@ -48,7 +48,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">内联/外联</label>
                         <div class="layui-input-block">
-                            <select th:field="*{nw}" lay-filter="selectFilter" lay-verify="required">
+                            <select th:field="*{nw}" lay-filter="selectFilter">
                                 <option value="">请选择</option>
                                 <option value="1" th:selected="${ehbBanner.nw=='1'}">内联</option>
                                 <option value="2" th:selected="${ehbBanner.nw=='2'}">外联</option>
@@ -133,6 +133,9 @@
                         layer.msg('外联链接未填写！',core.showtime);
                         return false;
                     }
+                }else{
+                    data.field.nlid = null;
+                    data.field.linkurl = null;
                 }
                 var resultData = core.ajax('/platform/banner/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
