--- a/src/main/resources/templates/advertising/input.html
+++ b/src/main/resources/templates/advertising/input.html
@@ -32,6 +32,7 @@
                         <label class="layui-form-label">内联/外联</label>
                         <div class="layui-input-block">
                             <select th:field="*{type}" lay-filter="selectFilter">
+                                <option value="">请选择</option>
                                 <option value="1" th:selected="${ehbAdvertising.type=='1'}">站内</option>
                                 <option value="2" th:selected="${ehbAdvertising.type=='2'}">站外</option>
                             </select>
