参展预登记导出功能

--- a/src/main/resources/templates/visitpre/list.html
+++ b/src/main/resources/templates/visitpre/list.html
@@ -20,14 +20,14 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
-                                            <div class="layui-form-item">
-                                                <label class="layui-form-label">公司名称</label>
-                                                <div class="layui-input-block">
-                                                    <input type="text" name="name" placeholder="公司名称" autocomplete="off" class="layui-input">
-                                                </div>
-                                            </div>
-                                        </div>
+<!--                                        <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">-->
+<!--                                            <div class="layui-form-item">-->
+<!--                                                <label class="layui-form-label">公司名称</label>-->
+<!--                                                <div class="layui-input-block">-->
+<!--                                                    <input type="text" name="name" placeholder="公司名称" autocomplete="off" class="layui-input">-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
                                         <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
                                             <div class="layui-form-item">
                                                 <label class="layui-form-label">创建时间段</label>
@@ -65,7 +65,7 @@
 
         <script type="text/html" id="titleToolbar">
             <div class="layui-btn-container">
-<!--                <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加"></i>添加</button>-->
+                <button class="layui-btn layui-btn-sm" lay-event="export"><i class="layui-icon layui-icon-add-circle" title="导出"></i>导出</button>
             </div>
         </script>
 
