--- a/src/main/resources/templates/feedback/list.html
+++ b/src/main/resources/templates/feedback/list.html
@@ -55,6 +55,12 @@
             </div>
         </div>
 
+        <script type="text/html" id="titleToolbar">
+            <div class="layui-btn-container">
+                <button class="layui-btn layui-btn-sm" lay-event="export"><i class="layui-icon layui-icon-add-circle" title="导出"></i>导出</button>
+            </div>
+        </script>
+
         <script type="text/html" id="rowToolBar">
 <!--            <a class="layui-btn layui-btn-xs" lay-event="detail"><i class="layui-icon layui-icon-form" title="查看"></i></a>-->
             <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit" title="编辑"></i></a>
