--- a/src/main/resources/templates/problem/input.html
+++ b/src/main/resources/templates/problem/input.html
@@ -21,7 +21,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">内容</label>
                         <div class="layui-input-block">
-                        <textarea id="editor_id" required  lay-verify="required" th:field="*{content}" style="width:700px;height:300px;" class="layui-textarea" >
+                        <textarea id="editor_id" required  lay-verify="required" th:field="*{content}" style="width:100%;height:900px;" class="layui-textarea" >
                         </textarea>
                         </div>
                     </div>
