--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -109,7 +109,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">虚拟展厅html地址</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{halurl}" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{halurl}" autocomplete="off" class="layui-input" readonly>
                         </div>
                     </div>
                     <div class="layui-form-item layui-form-text">
